--- a/app/_layouts/usecases.html
+++ b/app/_layouts/usecases.html
@@ -10,7 +10,7 @@ layout: default
 			<div class="overlay-description">
 				<span class="type-category">Featured</span>
 				<h4><a class="text-link" href="">Name of Dataset</a></h4>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+				<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
 				<a class="normal-link" href="">View Site</a>
 			</div>
 		</div>
