--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -18,27 +18,27 @@ layout: default
 							<label class="header-filter">Category</label>
 							<ul class="list-type-none">
 								<li class="list-item-filter list-item-filter-housing">
-									<label>Category Name <span>(2)</span>
+									<label>Category Name <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-population">
-									<label>Category Name <span>(2)</span>
+									<label>Category Name <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-women">
-									<label>Category Name <span>(2)</span>
+									<label>Category Name <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-trade">
-									<label>Category Name <span>(2)</span>
+									<label>Category Name <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-economy">
-									<label>Category Name <span>(2)</span>
+									<label>Category Name <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
@@ -50,17 +50,17 @@ layout: default
 							<label class="header-filter">Format</label>
 							<ul class="list-type-none">
 								<li class="list-item-filter">
-									<label>CSV <span>(2)</span>
+									<label>CSV <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter">
-									<label>XML <span>(2)</span>
+									<label>XML <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter">
-									<label>JSON <span>(2)</span>
+									<label>JSON <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
@@ -94,7 +94,7 @@ layout: default
 				<ul class="list-type-none">
 					<li class="population list-item-vertical">
 						<span class="type-category">Population</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -111,7 +111,7 @@ layout: default
 					</li>
 					<li class="trade list-item-vertical">
 						<span class="type-category">Trade</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -128,7 +128,7 @@ layout: default
 					</li>
 					<li class="housing list-item-vertical">
 						<span class="type-category">Housing</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -145,7 +145,7 @@ layout: default
 					</li>
 					<li class="women list-item-vertical">
 						<span class="type-category">Women</span>
-						<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -162,7 +162,7 @@ layout: default
 					</li>
 					<li class="housing list-item-vertical">
 						<span class="type-category">Housing</span>
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Dataset</a></h5>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
