--- a/app/_layouts/resources.html
+++ b/app/_layouts/resources.html
@@ -13,13 +13,13 @@ layout: default
 		<div class="sidebar sidebar-fixed">
 			<h5>Jump to</h5>
 			<ul class="list-type-none">
-				<li class="list-item-filter">
+				<li class="list-item-filter link-filter">
 					<a href="">Category 1 <span>(2)</span></a>
 				</li>
-				<li class="list-item-filter">
+				<li class="list-item-filter link-filter">
 					<a href="">Category 2 <span>(2)</span></a>
 				</li>
-				<li class="list-item-filter">
+				<li class="list-item-filter link-filter">
 					<a href="">Category 3 <span>(2)</span></a>
 				</li>
 			</ul>
@@ -29,7 +29,7 @@ layout: default
 				<h4 class="header-divider">Resource Category</h4>
 				<ul class="list-type-none">
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource 1</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource 1</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -37,7 +37,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource 2</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource 2</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -45,36 +45,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource 3</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-				</ul>
-			</div>
-			<div class="faux-list-item">
-				<h4 class="header-divider">Resource Category</h4>
-				<ul class="list-type-none">
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
-						<dl class="metadata">
-							<dt>Source:</dt>
-							<dd>Name of Source</dd>
-						</dl>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-					</li>
-					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource 3</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -87,7 +58,7 @@ layout: default
 				<h4 class="header-divider">Resource Category</h4>
 				<ul class="list-type-none">
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -95,7 +66,7 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
@@ -103,7 +74,36 @@ layout: default
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
 					</li>
 					<li class="list-item-block">
-						<h5 class="header-with-description"><a class="text-link" href="">Name of Resource</a></h5>
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+				</ul>
+			</div>
+			<div class="faux-list-item">
+				<h4 class="header-divider">Resource Category</h4>
+				<ul class="list-type-none">
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
+					</li>
+					<li class="list-item-block">
+						<h5 class="header-with-description"><a class="text-link" target="_blank" href="">Name of Resource</a></h5>
 						<dl class="metadata">
 							<dt>Source:</dt>
 							<dd>Name of Source</dd>
