--- a/app/_layouts/developers.html
+++ b/app/_layouts/developers.html
@@ -3,9 +3,11 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper wrapper-content wrapper-content-sm">
+	<div class="wrapper wrapper-content wrapper-content-sm content-block">
 		<h1>Developers</h1>
-		<p class="description-md width-shortened-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros. Etiam laoreet fermentum nibh vel auctor. Cras sed ipsum ac nunc consequat interdum eu quis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+		{% for post in site.developers | where:"lang",page.lang %}
+		  {{post.content}}
+		{% endfor %}
 		<a class="button" href="">View the API</a>
 		<a class="button button-secondary" href="https://github.com/orgs/iranopendata/">Find us on Github</a>
 	</div>
@@ -23,10 +25,11 @@ layout: default
 	</div>
 </section>
 <section>
-	<div class="wrapper wrapper-content wrapper-content-sm">
+	<div class="wrapper wrapper-content wrapper-content-sm content-block">
 		<h2>Methodology</h2>
-		<p class="description-md width-shortened-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie. Nunc congue nulla mi, et consequat tellus dapibus ac. Fusce eget magna ante. Vestibulum quis varius libero. Proin ac tellus eu massa consequat fringilla quis id eros.</p>
-		<p class="description-md width-shortened-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra leo sed libero bibendum pharetra vitae at nibh. Praesent quis sem mattis, ullamcorper ligula sed, venenatis metus. Maecenas ornare tempor eleifend. Vivamus eleifend congue erat, quis rhoncus leo semper ac. In efficitur justo eu mattis vestibulum. Nullam auctor dui eros, eu pharetra erat molestie eu. Sed in nisl risus. Aenean posuere quam ac sapien semper molestie.</p>
+		{% for post in site.methodology | where: "lang",page.lang %}
+			{{post.content}}
+		{% endfor %}
 		<a class="button" href="">Learn More</a>
 	</div>
 </section>
