--- a/app/assets/styles/_reset.scss
+++ b/app/assets/styles/_reset.scss
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-    color: $link-color;
+    color: $text-color;
     text-decoration: none;
 
     &:visited {
