adding active classes to nav items

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -28,3 +28,4 @@
 <!-- build:js /assets/scripts/bundle.js -->
 <script src="/assets/scripts/bundle.js"></script>
 <!-- endbuild -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
