--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -8,12 +8,12 @@
 			<div class="nav-mobile">
 				<nav>
 					<ul class="nav-list list-type-none">
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
-						<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
+						<li class="nav-list_item data"><a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+						<li class="nav-list_item usecases"><a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
+						<li class="nav-list_item resources"><a class="nav-link" href="/{{page.lang}}/resources/">{{lang.resources}}</a></li>
+						<li class="nav-list_item developers"><a class="nav-link" href="/{{page.lang}}/developers/">{{lang.developers}}</a></li>
+						<li class="nav-list_item about"><a class="nav-link" href="/{{page.lang}}/about/">{{lang.about}}</a></li>
+						<li class="nav-list_item contact"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 					</ul>
 				</nav>
 				<ul class="nav-languages nav-list list-type-none">
