added colors to categories

--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -16,29 +16,29 @@ layout: default
 					<div class="wrapper-filter-item">
 						<fieldset>
 							<label class="header-filter">Category</label>
-							<ul class="list-type-none">
+							<ul class="list-type-none filter-categories">
 								<li class="list-item-filter list-item-filter-housing">
-									<label>Category Name <span class="filter-number">(2)</span>
+									<label>Housing <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-population">
-									<label>Category Name <span class="filter-number">(2)</span>
+									<label>Population <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-women">
-									<label>Category Name <span class="filter-number">(2)</span>
+									<label>Women <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
 								<li class="list-item-filter list-item-filter-trade">
-									<label>Category Name <span class="filter-number">(2)</span>
+									<label>Trade <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
-								<li class="list-item-filter list-item-filter-economy">
-									<label>Category Name <span class="filter-number">(2)</span>
+								<li class="list-item-filter list-item-filter-economics">
+									<label>Economics <span class="filter-number">(2)</span>
 										<input class="checkbox" type="checkbox" name="" id="" value="" />
 									</label>
 								</li>
