--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -3,8 +3,8 @@ layout: default
 ---
 
 <section>
-	<div class="wrapper wrapper-content-sm">
-		<div class="housing-lg">
+	<div class="wrapper wrapper-content-sm wrapper-content-dataset">
+		<div class="housing content-dataset">
 			<span class="type-category type-category-lg">Housing</span>
 			<h1>Name of Individual Dataset</h1>
 			<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
