--- a/app/assets/styles/_variables.scss
+++ b/app/assets/styles/_variables.scss
@@ -20,10 +20,21 @@ $light-grey: #D2D2D2;
 $lightest-grey: #E8E7E7;
 $light-light-grey: #FAFAFA;
 
-$housing: #1AD0F2;
+$banking: #9AEA35;
+$budget: #78CC0E;
+$communications: #11D8A0;
+$crime: #079970;
+$economics: #1AD0F2;
+$education: #10A1DE;
+$employment: #107099;
+$environment: #03276F;
+$health: #202A4B;
+$housing: #A25BF3;
+$energy: #5C34DE;
+$population: #9F0BB7;
+$trade: #690679;
+$transport: #8C3865;
 $women: #6B3E57;
-$trade: #11D8A0;
-$population: #5C34DE;
 
 // Width of the content area
 $content-width: 1150px;
