made includes for seconary content, added tags throughout for word translation

--- a/app/_includes/footer.html
+++ b/app/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
 	<div class="wrapper">
 		<div class="wrapper-half wrapper-half-left">
-			<h5 class="header-with-description">Sign Up For Our Newsletter</h5>
-			<p>Get updates on new and updated datasets.</p>
+			<h5 class="header-with-description">{{lang.sign_up-title}}</h5>
+			<p>{{lang.newsletter-descript}}</p>
 			<input type="" name="" placeholder="Enter Your Email">
-			<button class="button button-sm button-secondary">Submit</button>
+			<button class="button button-sm button-secondary">{{lang.button-submit}}</button>
 		</div>
 		<div class="wrapper-half wrapper-half-right">
 			<nav class="float-right">
@@ -17,7 +17,7 @@
 					<li class="nav-list_item"><a class="nav-link" href="/{{page.lang}}/contact/">{{lang.contact}}</a></li>
 				</ul>
 			</nav>
-			<a class="button button-sm float-right button-standalone" href="">Find Us On Github</a>
+			<a class="button button-sm float-right button-standalone" href="">{{lang.button-github}}</a>
 		</div>
 	</div>
 </footer>
