--- a/app/_layouts/data.html
+++ b/app/_layouts/data.html
@@ -1,21 +1,21 @@
 ---
 layout: default
 ---
-
+{% assign lang = site.data[page.lang][0] %}
 <section>
 	<div class="wrapper wrapper-content">
 		<div class="feature-internal">
-			<h1>Available Data</h1>
-			<p class="description-lg">Lorem ipsum dolor sit amet, consectetur adipiscing elit metus. Vestibulum at mauris vestibulum, interdum quam id, egestas metus. In viverra elit id auctor pharetra.</p>
+			<h1>{{lang.data-title}}</h1>
+			<p class="description-lg">{{lang.data-descript}}</p>
 		</div>
 		<div class="content-internal">
-			<a class="button button-filter" href="">Filter Datasets</a>
+			<a class="button button-filter" href="">{{lang.filter-title}}</a>
 			<div class="sidebar">
-				<h5>Filter Datasets</h5>
+				<h5>{{lang.filter-title}}</h5>
 				<form>
 					<div class="wrapper-filter-item">
 						<fieldset>
-							<label class="header-filter">Category</label>
+							<label class="header-filter">{{lang.category-title}}</label>
 							<ul class="list-type-none filter-categories">
 								<li class="list-item-filter list-item-filter-housing">
 									<label>Housing <span class="filter-number">(2)</span>
@@ -47,7 +47,7 @@ layout: default
 					</div>
 					<div class="wrapper-filter-item">
 						<fieldset>
-							<label class="header-filter">Format</label>
+							<label class="header-filter">{{lang.format-title}}</label>
 							<ul class="list-type-none">
 								<li class="list-item-filter">
 									<label>CSV <span class="filter-number">(2)</span>
@@ -69,7 +69,7 @@ layout: default
 					</div>
 					<div class="wrapper-filter-item">
 						<fieldset>
-							<label class="header-filter">Date Range</label>
+							<label class="header-filter">{{lang.date-title}}</label>
 							<ul class="list-type-none">
 								<li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">1999</span></li>
 								<li class="list-item-datarange"><span>to</span></li>
@@ -82,7 +82,7 @@ layout: default
 			<div class="content-sidebar">
 				<h6 class="content-sidebar-header">Showing 15 Datasets</h6>
 				<div class="sort-filter">
-					<span class="sort-filter-header">Sort by</span>
+					<span class="sort-filter-header">{{lang.sort}}</span>
 					<div class="dropdown-sm">Recent Updates</div>
 					<div class="dropdown-categories">
 						<ul class="list-type-none">
@@ -191,14 +191,4 @@ layout: default
 		</div>
 	</div>
 </section>
-<section class="section-black section-black-last">
-	<div class="wrapper wrapper-content">
-		<div class="centered-content">
-			<h2 class="section-black-header">Don't see what you're looking for?</h2>
-			<div class="section-black-description">
-				<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis.</p>
-				<a class="button button-white" href="/{{page.lang}}/contact/">Suggest a Dataset</a>
-			</div>
-		</div>
-	</div>
-</section>
+{% include suggest-dataset.html %}
