posts for all editable pages and added favicon

--- a/app/_includes/header.html
+++ b/app/_includes/header.html
@@ -9,7 +9,7 @@
 				<nav>
 					<ul class="nav-list list-type-none">
             {% if page.id == 'data' %}<li class="nav-list_item active data">{% else %}<li class="nav-list_item data">{% endif %}
-              <a class="nav-link" href="/{{page.lang}}/data/">{{lang.data}}</a></li>
+              <a class="nav-link" href="/{{page.lang}}/datasets/">{{lang.data}}</a></li>
             {% if page.id == 'usecases' %}<li class="nav-list_item active usecases">{% else %}<li class="nav-list_item usecases">{% endif %}
 						  <a class="nav-link" href="/{{page.lang}}/usecases/">{{lang.use_cases}}</a></li>
             {% if page.id == 'resources' %}<li class="nav-list_item active resources">{% else %}<li class="nav-list_item resources">{% endif %}
