--- a/app/_includes/head.html
+++ b/app/_includes/head.html
@@ -15,5 +15,21 @@
   <link rel="stylesheet" href="/assets/styles/main_rtl.css">
 {% endif %}
 <!-- endbuild -->
+<link rel="apple-touch-icon" sizes="57x57" href="/assets/graphics/meta/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/graphics/meta/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/graphics/meta/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/graphics/meta/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/graphics/meta/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/graphics/meta/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/graphics/meta/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/graphics/meta/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/graphics/meta/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/assets/graphics/meta/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/graphics/meta/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/graphics/meta/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/graphics/meta/favicon-16x16.png">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/assets/graphics/meta/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
 </head>
