--- a/app/_layouts/datasets.html
+++ b/app/_layouts/datasets.html
@@ -1,69 +1,194 @@
 ---
 layout: default
 ---
-
+{% assign lang = site.data[page.lang][0] %}
 <section>
-	<div class="wrapper wrapper-content-sm wrapper-content-dataset">
-		<div class="housing content-dataset">
-			<span class="type-category type-category-lg">Housing</span>
-			<h1>Name of Individual Dataset</h1>
-			<p class="description-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
-			<dl class="metadata-lg">
-				<dt class="metadata-item metadata-item-header">Source</dt>
-				<dd class="metadata-item">Name of source</dd>
-
-				<dt class="metadata-item metadata-item-header">Dates</dt>
-				<dd class="metadata-item">Jun 2010 - Jul 2016</dd>
-
-				<dt class="metadata-item metadata-item-header">Formats</dt>
-				<dd class="metadata-item">
-					<span class="element-file-type element-file-type-lg">CSV</span>
-					<span class="element-file-type element-file-type-lg">XML</span>
-				</dd>
-
-				<dt class="metadata-item metadata-item-header">ID</dt>
-				<dd class="metadata-item">ID</dd>
-
-				<dt class="metadata-item metadata-item-header">Methodology</dt>
-				<dd class="metadata-item">Methodology</dd>
-			</dl>
-			<a class="button" href="">Download Dataset</a>
-			<a class="button button-secondary" href="">Share</a>
-		</div>
-		<div class="subsection">
-			<h2>Issues or Notes</h2>
-			<span>Jul 28, 2016</span>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris fermentum massa eget odio elementum, ac ultricies dolor tincidunt. Nulla eu leo a tortor aliquet eleifend. Aliquam eu magna vitae nisl porttitor consectetur vel ut quam. Phasellus magna augue, rutrum vitae vulputate eget, mattis eget ante. Nulla tincidunt, dolor vel imperdiet hendrerit, nisi odio viverra dolor, et condimentum justo ex et urna.</p>
-		</div>
-	</div>
-</section>
-<section class="section-black section-black-last">
 	<div class="wrapper wrapper-content">
-		<h2 class="section-black-header">Projects Made With This Dataset</h2>
-		<div class="section-black-description">
-			<ul class="list-type-none">
-				<li class="list-item-block">
-					<a href=""><img src="/assets/graphics/usecase3.jpg"></a>
-					<span class="type-category">Population</span>
-					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
-					<dl class="metadata">
-						<dt>Source:</dt>
-						<dd>Name of Source</dd>
-					</dl>
-				</li>
-				<li class="list-item-block">
-					<a href=""><img src="/assets/graphics/usecase2.jpg"></a>
-					<span class="type-category">Population</span>
-					<h5 class="header-with-description"><a href="">Name of Dataset</a></h5>
-					<dl class="metadata">
-						<dt>Source:</dt>
-						<dd>Name of Source</dd>
-					</dl>
-				</li>
-				<li>
-					<a class="icon-arrow-right" href="">Next</a>
-				</li>
-			</ul>
+		<div class="feature-internal">
+			<h1>{{lang.data-title}}</h1>
+			<p class="description-lg">{{lang.data-descript}}</p>
+		</div>
+		<div class="content-internal">
+			<a class="button button-filter" href="">{{lang.filter-title}}</a>
+			<div class="sidebar">
+				<h5>{{lang.filter-title}}</h5>
+				<form>
+					<div class="wrapper-filter-item">
+						<fieldset>
+							<label class="header-filter">{{lang.category-title}}</label>
+							<ul class="list-type-none filter-categories">
+								<li class="list-item-filter list-item-filter-housing">
+									<label>Housing <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter list-item-filter-population">
+									<label>Population <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter list-item-filter-women">
+									<label>Women <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter list-item-filter-trade">
+									<label>Trade <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter list-item-filter-economics">
+									<label>Economics <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+							</ul>
+						</fieldset>
+					</div>
+					<div class="wrapper-filter-item">
+						<fieldset>
+							<label class="header-filter">{{lang.format-title}}</label>
+							<ul class="list-type-none">
+								<li class="list-item-filter">
+									<label>CSV <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter">
+									<label>XML <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+								<li class="list-item-filter">
+									<label>JSON <span class="filter-number">(2)</span>
+										<input class="checkbox" type="checkbox" name="" id="" value="" />
+									</label>
+								</li>
+							</ul>
+						</fieldset>
+					</div>
+					<div class="wrapper-filter-item">
+						<fieldset>
+							<label class="header-filter">{{lang.date-title}}</label>
+							<ul class="list-type-none">
+								<li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">1999</span></li>
+								<li class="list-item-datarange"><span>to</span></li>
+								<li class="list-item-datarange"><span class="dropdown-sm dropdown-sm-date">2016</span></li>
+							</ul>
+						</fieldset>
+					</div>
+				</form>
+			</div>
+			<div class="content-sidebar">
+				<h6 class="content-sidebar-header">Showing 15 Datasets</h6>
+				<div class="sort-filter">
+					<span class="sort-filter-header">{{lang.sort}}</span>
+					<div class="dropdown-sm">Recent Updates</div>
+					<div class="dropdown-categories">
+						<ul class="list-type-none">
+							<li class="dropdown-categories-item">Alphabetically</li>
+							<li class="dropdown-categories-item">Alphabetically</li>
+						</ul>
+					</div>
+				</div>
+				<ul class="list-type-none">
+					<li class="population list-item-vertical">
+						<span class="type-category">Population</span>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/{{dataset.url}}">Name of Dataset</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<dl class="metadata metadata-date">
+							<dt>Updated:</dt>
+							<dd>Jul. 28, 2016</dd>
+						</dl>
+						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+						<ul class="list-type-none">
+							<li class="element-file-type">CSV</li>
+							<li class="element-file-type">XML</li>
+						</ul>
+					</li>
+					<li class="trade list-item-vertical">
+						<span class="type-category">Trade</span>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<dl class="metadata metadata-date">
+							<dt>Updated:</dt>
+							<dd>Jul. 28, 2016</dd>
+						</dl>
+						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+						<ul class="list-type-none">
+							<li class="element-file-type">CSV</li>
+							<li class="element-file-type">XML</li>
+						</ul>
+					</li>
+					<li class="housing list-item-vertical">
+						<span class="type-category">Housing</span>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<dl class="metadata metadata-date">
+							<dt>Updated:</dt>
+							<dd>Jul. 28, 2016</dd>
+						</dl>
+						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+						<ul class="list-type-none">
+							<li class="element-file-type">CSV</li>
+							<li class="element-file-type">XML</li>
+						</ul>
+					</li>
+					<li class="women list-item-vertical">
+						<span class="type-category">Women</span>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<dl class="metadata metadata-date">
+							<dt>Updated:</dt>
+							<dd>Jul. 28, 2016</dd>
+						</dl>
+						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+						<ul class="list-type-none">
+							<li class="element-file-type">CSV</li>
+							<li class="element-file-type">XML</li>
+						</ul>
+					</li>
+					<li class="housing list-item-vertical">
+						<span class="type-category">Housing</span>
+						<h5 class="header-with-description"><a class="text-link" href="/{{page.lang}}/dataset/">Name of Dataset</a></h5>
+						<dl class="metadata">
+							<dt>Source:</dt>
+							<dd>Name of Source</dd>
+						</dl>
+						<dl class="metadata metadata-date">
+							<dt>Updated:</dt>
+							<dd>Jul. 28, 2016</dd>
+						</dl>
+						<p class="width-shortened">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut augue aliquet ligula aliquam faucibus a ac mauris. Sed sagittis tempor sapien ac sagittis. Sed sagittis tempor sapien ac sagittis.</p>
+						<ul class="list-type-none">
+							<li class="element-file-type">CSV</li>
+							<li class="element-file-type">XML</li>
+						</ul>
+					</li>
+				</ul>
+				<div class="pagination">
+					<ul class="list-type-none">
+						<li class="list-item-pagination pagination-previous"><a href="">Previous</a></li>
+						<li class="list-item-pagination"><a class="pagination-link-active" href="">1</a></li>
+						<li class="list-item-pagination"><a href="">2</a></li>
+						<li class="list-item-pagination"><a href="">3</a></li>
+						<li class="list-item-pagination pagination-next"><a href="">Next</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
+{% include suggest-dataset.html %}
