--- a/app/assets/styles/main_rtl.scss
+++ b/app/assets/styles/main_rtl.scss
@@ -189,11 +189,26 @@ nav {
 
 .block-partners {
 	margin-top: .8em;
+	float: left;
+	border-left: 0;
+	margin-left: 0em;
+	padding-left: 0em;
+	border-right: 3px solid $black;
+	margin-right: 4em;
+	padding-right: 4em;
 	li {
 		@media screen and (max-width: 600px) {
 			float: right;
 			margin-right: 0;
 			margin-left: 4%;
+		}
+	}
+}
+
+.wrapper-content-about {
+	p {
+		&:nth-of-type(3) {
+			float: right;
 		}
 	}
 }
